# linkml-core

./: .gitignore  AGENTS.md  Cargo.toml  README-oxrdf.md  README.md  pyproject.toml  readme-python.md  readme-python.txt  regen.sh
.cargo/: config.toml
.github/workflows/: CI.yml
src/main/: Cargo.toml
src/main/src/: lib.rs
src/metamodel/: Cargo.toml  Cargo.toml~  pyproject.toml
src/metamodel/src/: lib.rs  poly.rs  poly_containers.rs  serde_utils.rs
src/python/: Cargo.toml  pyproject.toml
src/python/python/linkml_runtime_rust/: __init__.py  _native.pyi  debug_utils.py  schemaview.py
src/python/src/: lib.rs
src/python/tests/: python_api.rs  python_diff_patch.rs  python_equals.rs  python_navigate.rs  python_repr.rs  python_value.rs
src/runtime/: Cargo.toml  pyproject.toml  pyproject.toml~
src/runtime/python/linkml_runtime/: __init__.py  _resolver.py
src/runtime/python/linkml_runtime_rust/: __init__.py  _resolver.py  debug_utils.py  pretty.py  schemaview.py
src/runtime/src/: diff.rs  lib.rs  python.rs  turtle.rs
src/runtime/tests/: alias.rs  basic.rs  cli.rs  convert.rs  diff.rs  diff_cli.rs  diff_identifier.rs  enum.rs  equality.rs  example_personinfo_data.yaml  example_personinfo_data_2.yaml  inlined_mapping_subclass.rs  navigate.rs  personinfo.yaml  polymorphic.rs  python_api.rs  python_repr.rs  python_value.rs  schema_validate.rs  trace.rs  validation.rs
src/runtime/tests/data/: alias_data.yaml  alias_schema.yaml  enum_invalid.yaml  enum_schema.yaml  enum_valid.yaml  example_personinfo_data.yaml  example_personinfo_data_2.yaml  example_personinfo_data_invalid.yaml  example_personinfo_data_nulls.yaml  invalid_schema.yaml  mapping_data.json  mapping_schema.yaml  person_invalid.yaml  person_older.yaml  person_partial.yaml  person_valid.yaml  personinfo.yaml  poly_array.yaml  poly_schema.yaml  poly_with_type.yaml  poly_without_type.yaml  root_with_type.yaml  root_without_type.yaml  schema.yaml
src/schemaview/: Cargo.toml  pyproject.toml
src/schemaview/src/: classview.rs  converter.rs  curie.rs  enumview.rs  identifier.rs  io.rs  lib.rs  resolve.rs  schemaview.rs  slotview.rs
src/schemaview/tests/: class_lookup.rs  class_uri.rs  cross_schema_is_a.rs  get_descendants_cross_schema.rs  identifier_conversion.rs  local_import.rs  prefixed_names.rs  python_api.rs  slot_mode.rs  slot_view.rs
src/schemaview/tests/data/: container.yaml  era.yaml  geo.yaml  local_main.yaml  local_target.yaml  meta.yaml  modes_schema.yaml  person.yaml  prefixed_names.yaml  slot_usage_base.yaml  slot_usage_specialized.yaml
src/tools/: Cargo.toml
src/tools/tests/: cli.rs  diff_cli.rs  schema_validate.rs
src/wasm/: Cargo.toml
src/wasm/src/: lib.rs
