[package]
name = "linkml_runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "linkml_runtime"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "linkml-validate"
path = "src/bin/linkml_validate.rs"

[[bin]]
name = "linkml-convert"
path = "src/bin/linkml_convert.rs"

[[bin]]
name = "linkml-diff"
path = "src/bin/linkml_diff.rs"

[[bin]]
name = "linkml-patch"
path = "src/bin/linkml_patch.rs"

[[bin]]
name = "linkml-schema-validate"
path = "src/bin/linkml_schema_validate.rs"

[dependencies]
linkml_schemaview = { package = "schemaview", path = "../schemaview" }
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
curies = "0.1.3"
linkml_meta = { path = "../metamodel" }
oxrdf = "0.2"
oxttl = "0.1"
pyo3 = { version = "0.25.0", optional = true }
serde_yml = "0.0.12"
serde_path_to_error = "0.1.17"
regex = "1"
percent-encoding = "2.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
tempfile = "3"

[features]
python = ["pyo3", "linkml_meta/pyo3"]
extension-module = ["pyo3/extension-module"]
