[package]
name = "linkml_runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "linkml_runtime"
crate-type = ["rlib"]


[dependencies]
linkml_schemaview = { package = "schemaview", path = "../schemaview", default-features = false }
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
linkml_meta = { path = "../metamodel" }
oxrdf = "0.2"
oxttl = "0.1"
 
serde_yml = "0.0.12"
serde_path_to_error = "0.1.17"
regex = "1"
percent-encoding = "2.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
tempfile = "3"

[features]
default = ["resolve"]
resolve = ["linkml_schemaview/resolve"]
