[package]
name = "schemaview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "linkml_schemaview"
crate-type = ["rlib"]

[dependencies]
linkml_meta = { path = "../metamodel" }
serde_yml = "0.0.12"
itertools = "0.14.0"
serde_path_to_error = "0.1.17"
thiserror = "1"
curies = { version = "0.1.3", optional = true }

[dependencies.reqwest]
version = "0.12.16"
default-features = false
features = ["blocking", "rustls-tls"]
optional = true

[features]
default = ["resolve", "curies"]
resolve = ["reqwest"]
curies = ["dep:curies"]
